--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "eslint-plugin-vue": "^7.12.1",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.2"
+    "stylus": "^0.55.0",
+    "stylus-loader": "3.0.2"
   }
 }
